--- a/kubernetes/manifest/deployment/consumer-one-deployment.yaml
+++ b/kubernetes/manifest/deployment/consumer-one-deployment.yaml
@@ -33,8 +33,8 @@ spec:
           value: "5672"
         - name: RABBITMQ_USERNAME
           value: guest
-        image: consumer-one
-        imagePullPolicy: ""
+        image: bharathoptdocker/python-consumer-one:v1.0.0
+        imagePullPolicy: "Always"
         name: consumer-one
         resources: {}
       restartPolicy: Always
