--- a/kubernetes/manifest/deployment/producer-deployment.yaml
+++ b/kubernetes/manifest/deployment/producer-deployment.yaml
@@ -33,8 +33,8 @@ spec:
           value: "5672"
         - name: RABBITMQ_USERNAME
           value: guest
-        image: producer
-        imagePullPolicy: ""
+        image: bharathoptdocker/python-producer:v1.0.0
+        imagePullPolicy: "Always"
         name: producer
         ports:
         - containerPort: 5000
