--- a/kubernetes/manifest/deployment/consumer-one-deployment.yaml
+++ b/kubernetes/manifest/deployment/consumer-one-deployment.yaml
@@ -8,6 +8,7 @@ metadata:
   labels:
     io.kompose.service: consumer-one
   name: consumer-one
+  namespace: Kompose_StatefulSet
 spec:
   replicas: 1
   selector:
