--- a/kubernetes/manifest/deployment/consumer-three-deployment.yaml
+++ b/kubernetes/manifest/deployment/consumer-three-deployment.yaml
@@ -8,6 +8,7 @@ metadata:
   labels:
     io.kompose.service: consumer-three
   name: consumer-three
+  namespace: Kompose_StatefulSet
 spec:
   replicas: 1
   selector:
