--- a/kubernetes/manifest/deployment/consumer-two-deployment.yaml
+++ b/kubernetes/manifest/deployment/consumer-two-deployment.yaml
@@ -8,6 +8,7 @@ metadata:
   labels:
     io.kompose.service: consumer-two
   name: consumer-two
+  namespace: Kompose_StatefulSet
 spec:
   replicas: 1
   selector:
