--- a/kubernetes/manifest/deployment/producer-deployment.yaml
+++ b/kubernetes/manifest/deployment/producer-deployment.yaml
@@ -8,6 +8,7 @@ metadata:
   labels:
     io.kompose.service: producer
   name: producer
+  namespace: Kompose_StatefulSet
 spec:
   replicas: 1
   selector:
