--- a/kubernetes/manifest/service/producer-service.yaml
+++ b/kubernetes/manifest/service/producer-service.yaml
@@ -8,6 +8,7 @@ metadata:
   labels:
     io.kompose.service: producer
   name: producer
+  namespace: Kompose_StatefulSet
 spec:
   ports:
   - name: "5000"
