--- a/kubernetes/manifest/statefulset/db-persistentvolumeclaim.yaml
+++ b/kubernetes/manifest/statefulset/db-persistentvolumeclaim.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     io.kompose.service: db
   name: db
+  namespace: Kompose_StatefulSet
 spec:
   accessModes:
   - ReadWriteOnce
