--- a/kubernetes/manifest/statefulset/mysql-db-statefulset.yaml
+++ b/kubernetes/manifest/statefulset/mysql-db-statefulset.yaml
@@ -8,6 +8,7 @@ metadata:
   labels:
     io.kompose.service: mysql-db
   name: mysql-db
+  namespace: Kompose_StatefulSet
 spec:
   replicas: 1
   selector:
